[package]
name = "biometric-keystore"
version = "0.1.0"
edition = "2021"
publish = false
description = "macOS Keychain biometric ACL bindings for interviewer-v7's DEK storage"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi6", "async"] }
napi-derive = "3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
